--- a/web/css/cxm-ui.css
+++ b/web/css/cxm-ui.css
@@ -303,7 +303,7 @@ div.guide ul {
     border-color: #577399;
 }
 
-#modalplotoptionContent .cvm-btn {
+#modalplotoptionContent .ctm-btn {
     background-color: #C22B48;
     color: white;
     cursor: pointer;
